--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
 # Core PyTorch + Audio backend
-torch==2.3.0+cu118
-torchaudio==2.3.0+cu118
---extra-index-url https://download.pytorch.org/whl/cu118
+# ✅ PyTorch with CUDA 12.6 เหมาะกับ GPU ใหม่ๆ และ NVIDIA RTX 40 series และ 30 series และ comfyui
+torch==2.1.2+cu126
+torchaudio==2.1.2+cu126
+--extra-index-url https://download.pytorch.org/whl/cu126
+# ✅ PyTorch with CUDA 11.8 for older GPUs, if needed
+# torch==2.1.2+cu118
+# torchaudio==2.1.2+cu118
+# --extra-index-url https://download.pytorch.org/whl/cu118
+# ✅ PyTorch with CPU only
+# torch==2.1.2
+# torchaudio==2.1.2
+# ✅ PyTorch with MPS (Apple Silicon)
+# torch==2.1.2
+# torchaudio==2.1.2
+# ✅ PyTorch with ROCm (AMD GPUs)           
 
 # Thai NLP
 pythainlp
