--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
-  pythainlp
-  deepcut
-  omegaconf
-  hf_xet
-  vocos
-  matplotlib
-  g2p_en
-  ema_pytorch>=0.5.2
-  torchdiffeq
-  x_transformers>=1.31.14
-  bitsandbytes>0.37.0
-  torch-time-stretch
-  accelerate>=0.33.0
-  protobuf==3.19.6
+pythainlp
+deepcut
+omegaconf
+huggingface_hub[hf_xet]
+hf_xet
+vocos
+tqdm
+numpy
+matplotlib
+soundfile
+g2p_en
+librosa
+transformers
+ema_pytorch>=0.5.2
+torchdiffeq
+x_transformers>=1.31.14
+bitsandbytes>0.37.0
+torch-time-stretch
+accelerate>=0.33.0
+protobuf==3.19.6
