--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,46 @@
-pythainlp
-deepcut
-omegaconf
-hf_xet
-vocos
-tqdm
-numpy
-matplotlib
-soundfile
-g2p_en
-librosa
-jieba
-pypinyin
-wandb
-datasets
-pydub
-transformers
-ema_pytorch>=0.5.2
-torchdiffeq
-x_transformers>=1.31.14
-bitsandbytes>0.37.0
-torch-time-stretch
-accelerate>=0.33.0
+# ===== Core TTS Requirements =====
+pythainlp==5.1.2
+deepcut==0.7.0.0
+omegaconf==2.3.0
+hf_xet==1.1.9
+vocos==0.1.0
+librosa==0.11.0
+soundfile==0.13.1
+pydub==0.25.1
+g2p_en==2.1.0
+jieba==0.42.1
+pypinyin==0.55.0
+transformers==4.56.1
+datasets==4.0.0
+tqdm==4.67.1
+numpy==1.26.4
+matplotlib==3.10.6
 protobuf==3.19.6
+accelerate==1.10.1
+bitsandbytes==0.47.0
+torch-time-stretch==1.0.3
+torchdiffeq==0.2.5
+ema_pytorch==0.7.7
+x_transformers==2.7.4
 
-# ไลบรารีเสริมสำหรับสคริปต์เช็กอัปเดต
+# ===== Extra NLP Tools =====
+nltk==3.9.1
+antlr4-python3-runtime==4.9.3
+inflect==7.5.0
+distance==0.1.3
+loguru==0.7.3
+
+# ===== Dataset Dependencies =====
+pandas==2.2.3
+pyarrow>=14         # ปรับเป็น >=14 จาก pyarrow==21 เพื่อไม่ชน huggingface/datasets ใหม่ ๆ
+fsspec>=2023.6.0
+xxhash>=3.2.0
+dill>=0.3.8
+multiprocess>=0.70.15
+aiohttp>=3.8.5
+
+# ===== Dev & Analytics =====
+wandb==0.21.3
+sentry-sdk>=2.0.0
 huggingface_hub>=0.15.0
+wheel>=0.40.0
