--- a/requirements.txt
+++ b/requirements.txt
@@ -32,12 +32,19 @@ loguru==0.7.3
 
 # ===== Dataset Dependencies =====
 pandas==2.2.3
-pyarrow>=14         # ปรับเป็น >=14 จาก pyarrow==21 เพื่อไม่ชน huggingface/datasets ใหม่ ๆ
+pyarrow>=14
 fsspec>=2023.6.0
 xxhash>=3.2.0
 dill>=0.3.8
 multiprocess>=0.70.15
 aiohttp>=3.8.5
+
+# ===== Matplotlib Dependencies (headless-safe) =====
+pyparsing>=3.1.0
+cycler>=0.12.1
+kiwisolver>=1.4.5
+contourpy>=1.3.1
+fonttools>=4.53.0
 
 # ===== Dev & Analytics =====
 wandb==0.21.3
