--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ antlr4-python3-runtime==4.9.3
 inflect==7.5.0
 distance==0.1.3
 loguru==0.7.3
+encodec==0.1.1
 
 # ===== Dataset Dependencies =====
 pandas==2.2.3
